fix tests + module issues